<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailOfUsers">

    <de.hdodenhof.circleimageview.CircleImageView
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="122dp"
        android:layout_height="122dp"
        android:src="@android:color/holo_orange_dark"
        app:civ_border_width="1dp"
        android:id="@+id/isDetails_onAvatarsImg"
        android:layout_marginTop="18dp"
        app:civ_border_color="@android:color/darker_gray"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:id="@+id/isDetails_onName"
        android:layout_marginTop="6dp"
        android:textSize="13sp"
        app:layout_constraintTop_toBottomOf="@id/isDetails_onAvatarsImg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="6dp"
        app:layout_constraintTop_toBottomOf="@id/isDetails_onName"
        android:id="@+id/isDetails_onsUsername"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/username"
        android:textStyle="bold"
        android:textSize="13sp"/>
    <TextView
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/isDetails_onsUsername"
        android:gravity="center"
        android:id="@+id/isDetails_onsCompany"
        android:layout_marginTop="6dp"
        android:textSize="13sp"
        android:text="@string/company"/>
    <TextView
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/isDetails_onsCompany"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"
        android:id="@+id/isDetails_onsLocation"
        android:textSize="13sp"
        android:text="@string/location"/>
    <TextView
        app:layout_constraintTop_toBottomOf="@id/isDetails_onsLocation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="13sp"
        android:textStyle="bold"
        android:layout_marginTop="6dp"
        android:gravity="center"
        android:id="@+id/isDetails_onsRepository"
        android:text="@string/repoSt"/>

    <androidx.viewpager.widget.ViewPager
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/itsViewDetailPager"
        android:layout_marginTop="342dp"
        android:background="@color/white"/>

    <com.google.android.material.tabs.TabLayout
        android:minHeight="?actionBarSize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:tabIndicatorHeight="1dp"
        app:tabMode="fixed"
        android:layout_marginTop="35dp"
        app:layout_constraintTop_toBottomOf="@id/isDetails_onsRepository"
        android:id="@+id/on_LayoutTabs"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:backgroundTint="@color/laminateWood"
        android:id="@+id/tv_onsFavorDetail"
        app:borderWidth="0dp"
        app:fabSize="normal"
        android:src="@drawable/on_border_star"
        android:layout_margin="20dp"
        android:contentDescription="@string/txvDetailsOnFavorites" />

</androidx.constraintlayout.widget.ConstraintLayout>